fix: add classes to body and footer to fix layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,9 @@ body{
     font-weight: 400;
 }
 
+main > .container {
+    padding: 60px 15px 0;
+  }
 
 
 /* Header Styling */
